--- a/ML_project_KMeans.ipynb
+++ b/ML_project_KMeans.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "696cfde2",
+   "id": "5186c71a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "71458ad8",
+   "id": "cf6eb084",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa071524",
+   "id": "c6881299",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1dbe0fe5",
+   "id": "34bae964",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "920a1004",
+   "id": "87e9bed9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "9c0ca957",
+   "id": "b739a6a3",
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5d4e93e7",
+   "id": "c608e9e9",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "62a5af2a",
+   "id": "7c35c745",
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "5d7fe4df",
+   "id": "88bece75",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "95e231a3",
+   "id": "cc8910ef",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "87c8612c",
+   "id": "9f1bc235",
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "eb78d490",
+   "id": "d382f50e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2f5889cf",
+   "id": "2cea1b1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "9d390558",
+   "id": "6afbc1ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ccd1ecdc",
+   "id": "cbb432f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "d007764b",
+   "id": "44e2b2cf",
    "metadata": {},
    "outputs": [
     {
@@ -572,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "724bc024",
+   "id": "fcb0f97d",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "a77965a9",
+   "id": "2ef37177",
    "metadata": {},
    "outputs": [
     {
@@ -783,32 +783,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0b5bcb2",
+   "id": "59cf1d33",
    "metadata": {},
    "source": [
     "## Unsupervised machine learning clustering the dataset into the 4 groups accordingly company plan the marketing "
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "15861263",
+   "cell_type": "markdown",
+   "id": "1d4b4a9e",
    "metadata": {},
    "source": [
-    "Steps done\n",
-    "1.Importing required libraries\n",
-    "2.Loading dataset\n",
-    "3.Data cleaning\n",
-    "4.Data Modeling\n",
-    "5.Finding suitable clusters using Elbow method\n",
-    "6.After finding suitable cluster trained model using our dataset\n",
-    "7.Finally clustered the dataset and seen visualization using seaborn\n",
-    "\n"
+    "# Steps done   \n",
+    "#   1.Importing required libraries\n",
+    "#   2.Loading dataset\n",
+    "#   3.Data cleaning\n",
+    "#   4.Data Modeling\n",
+    "#   5.Finding suitable clusters using Elbow method\n",
+    "#   6.After finding suitable cluster trained model using our dataset\n",
+    "#   7.Finally clustered the dataset and seen visualization using seaborn"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dbc6856",
+   "id": "7cd94329",
    "metadata": {},
    "outputs": [],
    "source": []
